Valida el envio de mapa mental

--- a/tecolotl-web/src/main/webapp/alumno/mapa-mental/1.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mapa-mental/1.xhtml
@@ -6,6 +6,10 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 <ui:composition template="/template/escolar/template-alumno.xhtml">
+    <f:metadata>
+        <f:viewParam name="cardinalidad" value="#{mapaMental1Controlador.cardinalidad}" required="true"/>
+        <f:event type="preRenderView" listener="#{mapaMental1Controlador.llenaLista}"/>
+    </f:metadata>
     <ui:define name="menu">
         <div class="left-content-box  content-box-dark">
             <h:graphicImage library="img" name="avatar/astronauta-nino.svg" alt="" class="uk-border-circle profile-img"/>
@@ -56,13 +60,16 @@
                 <div class="uk-light">
                     <div class="uk-container uk-container-small fondo-mapa contorno">
                         <h1><span class="lescuadron">Mapa mental</span></h1>
-                        <h:form class="uk-form-stacked">
+                        <h:form class="uk-form-stacked" id="formulario-mapa-mental">
                             <div class="uk-margin uk-grid" uk-grid="" >
                                 <div class="uk-width-expand">
                                     <h:outputLabel styleClass="uk-form-label uk-text-bold" for="pregunta-0" value="#{mapaMental1Controlador.tareaMapaMentalModeloLista[0].pregunta}"/>
                                     <div class="uk-form-controls">
-                                        <h:inputTextarea styleClass="uk-textarea" id="pregunta-0" rows="3" value="#{mapaMental1Controlador.tareaMapaMentalModeloLista[0].respuesta}"/>
+                                        <h:inputTextarea styleClass="uk-textarea" id="pregunta-0" rows="3" value="#{mapaMental1Controlador.tareaMapaMentalModeloLista[0].respuesta}">
+                                            <f:validateRequired/>
+                                        </h:inputTextarea>
                                     </div>
+                                    <h:message for="pregunta-0" styleClass=""/>
                                 </div>
                                 <div class="uk-width-auto uk-visible@m" >
                                     <h:graphicImage library="img" name="mounstro/monstruo.svg" styleClass="uk-svg posicion-img" width="70" height="70"/>
@@ -72,8 +79,11 @@
                                 <div class="uk-width-expand  ">
                                     <h:outputLabel styleClass="uk-form-label uk-text-bold" for="pregunta-1" value="#{mapaMental1Controlador.tareaMapaMentalModeloLista[1].pregunta}"/>
                                     <div class="uk-form-controls">
-                                        <h:inputTextarea styleClass="uk-textarea" id="pregunta-1" rows="3" value="#{mapaMental1Controlador.tareaMapaMentalModeloLista[1].respuesta}"/>
+                                        <h:inputTextarea styleClass="uk-textarea" id="pregunta-1" rows="3" value="#{mapaMental1Controlador.tareaMapaMentalModeloLista[1].respuesta}">
+                                            <f:validateRequired/>
+                                        </h:inputTextarea>
                                     </div>
+                                    <h:message for="pregunta-1" styleClass=""/>
                                 </div>
                                 <div class="uk-width-auto uk-visible@m">
                                     <h:graphicImage library="img" name="mounstro/morado.svg" styleClass="uk-svg posicion-img" width="70" height="70"/>
@@ -83,8 +93,11 @@
                                 <div class="uk-width-expand  ">
                                     <h:outputLabel styleClass="uk-form-label uk-text-bold" for="pregunta-2" value="#{mapaMental1Controlador.tareaMapaMentalModeloLista[2].pregunta}"/>
                                     <div class="uk-form-controls">
-                                        <h:inputTextarea styleClass="uk-textarea" id="pregunta-2" rows="3" value="#{mapaMental1Controlador.tareaMapaMentalModeloLista[2].respuesta}"/>
+                                        <h:inputTextarea styleClass="uk-textarea" id="pregunta-2" rows="3" value="#{mapaMental1Controlador.tareaMapaMentalModeloLista[2].respuesta}">
+                                            <f:validateRequired/>
+                                        </h:inputTextarea>
                                     </div>
+                                    <h:message for="pregunta-2" styleClass=""/>
                                 </div>
                                 <div class="uk-width-auto uk-visible@m">
                                     <h:graphicImage library="img" name="mounstro/morado.svg" styleClass="uk-svg posicion-img" width="70" height="70"/>
@@ -94,8 +107,11 @@
                                 <div class="uk-width-expand  ">
                                     <h:outputLabel styleClass="uk-form-label uk-text-bold" for="pregunta-3" value="#{mapaMental1Controlador.tareaMapaMentalModeloLista[3].pregunta}"/>
                                     <div class="uk-form-controls">
-                                        <h:inputTextarea styleClass="uk-textarea" id="pregunta-3" rows="3" value="#{mapaMental1Controlador.tareaMapaMentalModeloLista[3].respuesta}"/>
+                                        <h:inputTextarea styleClass="uk-textarea" id="pregunta-3" rows="3" value="#{mapaMental1Controlador.tareaMapaMentalModeloLista[3].respuesta}">
+                                            <f:validateRequired/>
+                                        </h:inputTextarea>
                                     </div>
+                                    <h:message for="pregunta-3" styleClass=""/>
                                 </div>
                                 <div class="uk-width-auto uk-visible@m">
                                     <h:graphicImage library="img" name="/mounstro/morado.svg" styleClass="uk-svg posicion-img" width="70" height="70"/>
@@ -105,12 +121,18 @@
                                 <div class="uk-width-expand  ">
                                     <h:outputLabel styleClass="uk-form-label uk-text-bold" for="pregunta-4" value="#{mapaMental1Controlador.tareaMapaMentalModeloLista[4].pregunta}"/>
                                     <div class="uk-form-controls">
-                                        <h:inputTextarea styleClass="uk-textarea" id="pregunta-4" rows="3" value="#{mapaMental1Controlador.tareaMapaMentalModeloLista[4].respuesta}"/>
+                                        <h:inputTextarea styleClass="uk-textarea" id="pregunta-4" rows="3" value="#{mapaMental1Controlador.tareaMapaMentalModeloLista[4].respuesta}">
+                                            <f:validateRequired/>
+                                        </h:inputTextarea>
                                     </div>
+                                    <h:message for="pregunta-4" styleClass=""/>
                                 </div>
                                 <div class="uk-width-auto uk-visible@m">
                                     <h:graphicImage library="img" name="mounstro/morado.svg" styleClass="uk-svg posicion-img" width="70" height="70"/>
                                 </div>
+                            </div>
+                            <div>
+                                <h:commandButton id="boton-enviar-mapa-mental" value="Send" />
                             </div>
                         </h:form>
                     </div>
