--- a/tecolotl-web/src/main/webapp/alumno/mapa-mental/10.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mapa-mental/10.xhtml
@@ -51,41 +51,40 @@
     </ui:define>
     <ui:define name="contenido">
         <h:outputStylesheet library="css" name="/alumno/mapa-10.css"/>
-        <div class="uk-section margen-superior">
+        <div class="uk-section margen-superior uk-margin-small-right uk-margin-small-left ">
             <div class="uk-container padding-contenedor fondo-mapa-10">
-                    <h:panelGroup layout="block" class="uk-grid" pt:uk-grid="">
-                        <div class="globo-10 uk-width-1-3@m">
-
+                    <h:panelGroup layout="block" styleClass="uk-child-width-1-3@m uk-grid" pt:uk-grid="">
+                        <div class="globo-10 ">
+                            <textarea class="caja-texto-10" rows="" cols=""/>
                         </div>
-                        <div class="globo-10 uk-width-1-3@m">
-
+                        <div class="globo-10 ">
+                            <textarea class="caja-texto-10" rows="" cols=""/>
                         </div>
-                        <div class="globo-10 uk-width-1-3@m">
-
+                        <div class="globo-10 ">
+                            <textarea class="caja-texto-10" rows="" cols=""/>
+                        </div>
+                        <div class="globo-10 ">
+                            <textarea class="caja-texto-10" rows="" cols=""/>
+                        </div>
+                        <div class="fondo-imagen-10 ">
+                            <div class="titulo-imagen-10 ">
+                                <h3 class="titulo-10">Main idea</h3>
+                            </div>
+                        </div>
+                        <div class="globo-10">
+                            <textarea class="caja-texto-10" rows="" cols=""/>
+                        </div>
+                        <div class="globo-10 ">
+                            <textarea class="caja-texto-10" rows="" cols=""/>
+                        </div>
+                        <div class="globo-10 ">
+                            <textarea class="caja-texto-10" rows="" cols=""/>
+                        </div>
+                        <div class="globo-10 ">
+                            <textarea class="caja-texto-10" rows="" cols=""/>
                         </div>
                     </h:panelGroup>
-                <h:panelGroup layout="block" class="uk-grid" pt:uk-grid="">
-                    <div class="globo-10 uk-width-1-3@m">
 
-                    </div>
-                    <div class="globo-10 uk-width-1-3@m">
-
-                    </div>
-                    <div class="globo-10 uk-width-1-3@m">
-
-                    </div>
-                </h:panelGroup>
-                <h:panelGroup layout="block" class="uk-grid" pt:uk-grid="">
-                    <div class="globo-10 uk-width-1-3@m">
-
-                    </div>
-                    <div class="globo-10 uk-width-1-3@m">
-
-                    </div>
-                    <div class="globo-10 uk-width-1-3@m">
-
-                    </div>
-                </h:panelGroup>
 
             </div>
         </div>
