--- a/tecolotl-web/src/main/webapp/alumno/mapa-mental/5.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mapa-mental/5.xhtml
@@ -28,7 +28,6 @@
 
         <div class="left-nav-wrap  uk-visible@xl ">
             <ul class="uk-thumbnav uk-thumbnav-vertical uk-position-center uk-margin-large-top">
-                <!--<li class="uk-active"><a href="#"><img src="img/alumno/iconos-login/1.svg" width="80" alt=""></a></li>-->
                 <li><h:link outcome="dashboard-alumno" ><h:graphicImage library="img" name="alumno/planetas/tierra.svg" width="80" alt=""/></h:link></li>
                 <li><h:link outcome="transcrip-alumno"><h:graphicImage library="img" name="alumno/planetas/planeta1.svg" width="80" alt=""/></h:link></li>
                 <li><h:link outcome="glosario-alumno" ><h:graphicImage library="img" name="alumno/planetas/planeta2.svg"  width="80" alt=""/></h:link></li>
@@ -51,53 +50,38 @@
         </div>
     </ui:define>
     <ui:define name="contenido">
-        <h:outputStylesheet library="css" name="alumno/mapa-mental-historieta.css"/>
-        <div class="uk-section margen-superior uk-margin-small-right uk-margin-small-left">
-            <div  class="uk-container padding-contenedor fondo-6">
-                <h:panelGroup layout="block" styleClass=" contenedor-seis uk-grid " pt:uk-grid="">
-                    <div class="uk-width-2-5@m">
-                        <h3 class="subtitulo-6">Fact:</h3>
-                        <form action="" class="respuestas uk-padding-small">
-                            <label for="a">A:</label>
-                            <input type="text" id="a"/>
-                            <label for="b">B:</label>
-                            <input type="text" id="b"/>
-                            <label for="c">C:</label>
-                            <input type="text" id="c"/>
-                            <label for="d">D:</label>
-                            <input type="text" id="d"/>
-                            <label for="e">E:</label>
-                            <input type="text" id="e"/>
-                            <label for="f">F:</label>
-                            <input type="text" id="f"/>
-                            <label for="g">G:</label>
-                            <input type="text" id="g"/>
-                        </form>
+        <h:outputStylesheet library="css" name="/alumno/mapa-5.css"/>
+        <div class="uk-section margen-superior uk-margin-small-left uk-margin-small-right">
+            <div class="uk-container padding-contenedor fondo-mapa-5 uk-position-relative">
+                <h3 class="titulo-mapa-5">Compare &amp; Contrast</h3>
+                <div class="contenido-5"></div>
+                <div class="imagen-nube-5 uk-margin-auto-left uk-margin-auto-right">
+                    <h3 class="">How the same</h3>
+                </div>
+                <h:panelGroup layout="block" styleClass="uk-grid uk-child-width-1-3@m uk-margin-small-top" pt:uk-grid="" >
+                    <div class="nube-5">
+                        <input type="text"/>
                     </div>
-                    <div class="uk-width-3-5@m">
-                        <h3 class="subtitulo-6">Opinion:</h3>
-                        <form action="" class="respuestas uk-padding-small">
-                            <label for="a2">A:</label>
-                            <input type="text" id="a2"/>
-                            <label for="b2">B:</label>
-                            <input type="text" id="b2"/>
-                            <label for="c2">C:</label>
-                            <input type="text" id="c2"/>
-                            <label for="d2">D:</label>
-                            <input type="text" id="d2"/>
-                            <label for="e2">E:</label>
-                            <input type="text" id="e2"/>
-                            <label for="f2">F:</label>
-                            <input type="text" id="f2"/>
-                            <label for="g2">G:</label>
-                            <input type="text" id="g2"/>
-                        </form>
+                    <div class="nave-5"></div>
+                    <div class="nube-5">
+                        <input type="text"/>
                     </div>
                 </h:panelGroup>
-
+                <div class="imagen-nube-5 uk-margin-auto-left uk-margin-auto-right uk-margin-small-top ">
+                    <h3>How different</h3>
+                </div>
+                <h:panelGroup layout="block" styleClass="uk-grid uk-child-width-1-3@m uk-margin-small-top uk-margin-small-bottom " pt:uk-grid="">
+                    <div class="nave-5-1"></div>
+                    <div class="input-5">
+                        <input type="text"/>
+                        <input type="text"/>
+                        <input type="text"/>
+                    </div>
+                    <div class="nave-5-2"></div>
+                </h:panelGroup>
             </div>
-
         </div>
+
     </ui:define>
 </ui:composition>
 </html>
